subdomains/ryan/styles/Home.module.css
.main {
  padding: 0 1rem;
}

.main table {
  border-collapse: collapse;
  border-spacing: 0;
}

.main p {
  margin-top: 0;
  margin-bottom: 0.35em;
}

.main h1 {
  font: 1.8em Verdana;
  margin-bottom: 0.5em;
}

.main h2 {
  font: Bold 1.2em Verdana;
  text-transform: uppercase;
  border-bottom: 1px #dddddd solid;
  margin-top: 1em;
  margin-bottom: 0.35em;
}

.main h3 {
  font: 1.2em Verdana;
}

.content {
  padding-top: 1em;
  max-width: 900px;
  margin: 0 auto;
}

.header {
  text-align: center;
}

.subline {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 0.4em 0.6em;
}

.main ul ul {
  list-style: disc inside;
}

.activity {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  gap: 0.25em 0.75em;
  width: 100%;
  margin-bottom: 0.75em;
}

.main ul {
  flex-basis: 100%;
  margin-left: 0.5em;
  margin-right: 0.5em;
  padding-left: 0.5em;
}

.main li {
  margin-bottom: 0.2em;
}

.title {
  flex: 1 1 60%;
  min-width: 0;
}

.date {
  flex: 0 0 auto;
  margin-left: auto;
  white-space: nowrap;
}

.title h3 {
  display: inline;
  padding-right: 0.25em;
  word-break: break-word;
}

.title h6 {
  font-weight: normal;
  display: inline;
  white-space: nowrap;
}

.subline span {
  font-size: inherit;
}

.center {
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 4rem 0;
  max-width: 40em;
  margin-left: auto;
  margin-right: auto;
}

.info {
  padding-top: 0.5em;
  font-size: 1.1em;
}

@media screen and (max-width: 600px) {
  .main {
    font-size: 14px;
  }
  .main h1 {
    font-size: 2em;
  }
  .title {
    flex-basis: 100%;
  }
  .date {
    flex-basis: 100%;
    margin-left: 0;
    font-style: italic;
    opacity: 0.8;
  }
  .title h6 {
    white-space: normal;
  }
}

